2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * mautil.csproj: Updated.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Respect custom libdir during ./configure. Fixes bug
	#443205. Patch by Diego Pettenò.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Fix building with parallel make jobs (-j8). Fixes bug
	#443206. Patch by Diego Pettenò.

2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Dist fix.

2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* mautil.csproj, mautil.mdp: Use msbuild file format for projects.
	  Removed the old MD1 projects.

2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, mautil.1: Man page for mautil. Patch by Tim Retout.
	* mautil.mdp: Updated.

2008-04-10  Lluis Sanchez Gual <lluis@novell.com> 

	* mautil.csproj: Fix project file.

2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 

	* mautil.csproj: Add missing project file.

2007-12-15  Wade Berrier  <wberrier@novell.com> 

	* Makefile.am: install path for mautil.exe doesn't need DESTDIR (somehow...?)

2007-12-15  Lluis Sanchez Gual <lluis@novell.com> 

	* mautil.in, Makefile.am: Install mautil in /usr/lib/mono/mono-addins.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Main.cs: Added parameter for setting the startup path.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* mautil.mdp: Update paths.

2007-07-24  Lluis Sanchez Gual <lluis@novell.com> 

	* Main.cs: Fixed endless loop when the -v arg is specified before other
	  arguments.
